app/styles/dark.scss
/* ... */
.sca-dark .highlight {
    color: #474747
}
.sca-dark .taxonomy-list h4 {
    color: #fff;
}
.sca-dark .work-list-tabs {
    border: 1px #1f2731 solid !important;
    background-color: #262e39;
}
.sca-dark .light_greys {
    background-color: #1f2731;
}
.sca-dark .role_group_divider_top_1,
.sca-dark .role_group_divider_top_3,
.sca-dark .role_group_divider_top_5,
.sca-dark .role_group_divider_top_7 {
    border-bottom: 6px solid #1f2731;
    border-top: 1px solid #13181e;
}
.sca-dark .role_group_divider_bottom_1,
.sca-dark .role_group_divider_bottom_3,
.sca-dark .role_group_divider_bottom_5,
.sca-dark .role_group_divider_bottom_6 {
    border-top: 6px solid #1f2731;
    border-bottom: 1px solid #13181e;
}
.sca-dark .role_group_divider_bottom_0,
.sca-dark .role_group_divider_bottom_2,
.sca-dark .role_group_divider_bottom_4,
.sca-dark .role_group_divider_bottom_5 {
    border-top: 6px solid #3c3d48;
    border-bottom: 1px solid #3c3d48;
}
.sca-dark .role_group_divider_top_0,
.sca-dark .role_group_divider_top_2,
.sca-dark .role_group_divider_top_4,
.sca-dark .role_group_divider_top_6 {
    border-bottom: 6px solid #3c3d48;
    border-top: 1px solid #3c3d48;
}
.sca-dark .color_0.role-group-drag,
.sca-dark .color_2.role-group-drag,
.sca-dark .color_4.role-group-drag,
.sca-dark .color_6.role-group-drag {
    background-color: #303039;
}
.sca-dark .color_1.role-group-drag,
.sca-dark .color_3.role-group-drag,
.sca-dark .color_5.role-group-drag,
.sca-dark .color_7.role-group-drag {
    background-color: #1f2731;
}
.sca-dark .edits-row.color_0,
.sca-dark .edits-row.color_2,
.sca-dark .edits-row.color_4,
.sca-dark .edits-row.color_6 {
    background-color: #3c3d48;
}
.sca-dark .edits-row.color_1,
.sca-dark .edits-row.color_3,
.sca-dark .edits-row.color_5,
.sca-dark .edits-row.color_7 {
    background-color: #1f2731;
}
.sca-dark .bluehl {
    background-color: #01579b !important;
    border-top: 2px solid #01579b;
    border-bottom: 5px solid #01579b;
}
.sca-dark .bluehl .grey.darken-3 {
    background-color: #01579b
}
.sca-dark .bluehl .grey.darken-3 {
    border-bottom: 5px solid #01579b
}
.sca-dark .bluehl .grey.darken-3 {
    background-color: #01579b
}
.sca-dark .bluehl .grey.darken-3 {
    border-bottom: 5px solid #01579b
}
.sca-dark .tealhl .grey.darken-3 {
    background-color: #25444a
}
.sca-dark .tealhl {
    background-color: #25444a !important;
    border-top: 2px solid #25444a;
    border-bottom: 5px solid #25444a;
}
.sca-dark .redhl .grey.darken-3 {
    background-color: #B71C1C
}
.sca-dark .redlhl {
    background-color: #B71C1C !important;
    border-top: 2px solid #B71C1C;
    border-bottom: 2px solid #B71C1C;
}
.sca-dark .morebuttons {
    color: #00a6e5;
    background-color: transparent!important;
}
.sca-dark .ta-toolbar .btn-group button,
sca-dark .pull-left.follow-up {
    color: #3c3d48!important
}
.sca-dark .cyan.darken-2.iconbase {
    background-color: transparent!important;
    color: #0097a7;
}
.sca-dark .cyan.darken-2.iconbase:hover {
    background-color: transparent!important;
    color: #fff;
}
.sca-dark .table tr.clickable-row:hover {
    background-color: #262e39 !important;
}
.sca-dark .table tr.clickable-row td {
    border-top: 1px solid #262e39 !important
}
.sca-dark .table-title {
    color: #eee
}

